[project]
name = "aus-fuel"
version = "0.1.0"
description = "Australian fuel security decision-support dashboard for monitoring supply cover, IEA compliance, import risk, and tanker movements"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastexcel>=0.19.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "playwright>=1.44.0",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "streamlit>=1.55.0",
    "thefuzz>=0.22.1",
    "websockets>=14.0",
]
